--- a/wear/src/main/res/layout/activity_main.xml
+++ b/wear/src/main/res/layout/activity_main.xml
@@ -6,24 +6,23 @@
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="info.saxman.whererunner.MainActivity">
+    tools:context="info.saxman.android.whererunner.MainActivity">
 
     <FrameLayout
         android:id="@+id/main_content_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-    <android.support.wearable.view.drawer.WearableNavigationDrawer
+    <info.saxman.android.whererunner.framework.MyWearableNavigationDrawer
         android:id="@+id/nav_drawer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="?android:attr/colorPrimary" />
+        app:navigation_style="single_page" />
 
     <android.support.wearable.view.drawer.WearableActionDrawer
         android:id="@+id/action_drawer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="?android:attr/colorPrimary"
         app:action_menu="@menu/action_drawer_menu" />
 
 </android.support.wearable.view.drawer.WearableDrawerLayout>
