--- a/wear/src/main/res/values/dimens.xml
+++ b/wear/src/main/res/values/dimens.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- Generic text dimensions for styles -->
+    <dimen name="text_xlarge">50sp</dimen>
     <dimen name="text_large">22sp</dimen>
     <dimen name="text_medium">16sp</dimen>
     <dimen name="text_small">12sp</dimen>
