--- a/wear/src/main/res/values/themes.xml
+++ b/wear/src/main/res/values/themes.xml
@@ -1,8 +1,14 @@
 <resources>
+    <style name="AppTheme.SplashScreen" parent="AppTheme">
+        <item name="android:windowBackground">@drawable/bg_splash</item>
+    </style>
+
     <style name="AppTheme" parent="@style/Theme.Wearable">
         <item name="android:colorPrimary">@color/primary</item>
         <item name="android:colorPrimaryDark">@color/primary_dark</item>
         <item name="android:colorAccent">@color/primary_accent</item>
         <item name="android:windowBackground">@color/indigo_15b</item>
+        <item name="android:colorBackground">@color/indigo_15b</item>
+        <item name="android:colorBackgroundFloating">@color/primary</item>
     </style>
 </resources>
