--- a/wear/src/main/res/xml/prefs_settings_us.xml
+++ b/wear/src/main/res/xml/prefs_settings_us.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<!-- Default preferences for users in the United States -->
+
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
     <ListPreference
         android:key="@string/pref_units"
