--- a/wear/src/main/res/layout/alert_workout_end.xml
+++ b/wear/src/main/res/layout/alert_workout_end.xml
@@ -1,38 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.wearable.view.BoxInsetLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="15dp">
+    android:fillViewport="true"
+    android:layout_centerVertical="true">
 
-    <FrameLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="5dp"
-        app:layout_box="all">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp">
 
         <TextView
             android:id="@+id/text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
             android:gravity="center"
-            android:text="End Workout?"
-            style="@style/text_header"/>
+            android:text="@string/end_workout"
+            style="@style/text_normal"/>
 
-        <ImageView
-            android:id="@+id/cancel_button"
-            android:layout_gravity="bottom|start"
-            android:background="@drawable/accept_deny_dialog_negative_bg"
-            android:src="@drawable/ic_clear"
-            style="@style/action_button" />
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/text"
+            android:layout_centerHorizontal="true"
+            android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/confirm_button"
-            android:layout_gravity="bottom|end"
-            android:background="@drawable/accept_deny_dialog_positive_bg"
-            android:src="@drawable/ic_done"
-            style="@style/action_button" />
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp">
 
-    </FrameLayout>
-</android.support.wearable.view.BoxInsetLayout>
+                <ImageView
+                    android:id="@+id/confirm_button"
+                    android:background="@drawable/accept_deny_dialog_positive_bg"
+                    android:src="@drawable/ic_done"
+                    style="@style/action_button" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_toEndOf="@id/confirm_button"
+                    android:layout_centerVertical="true"
+                    android:layout_marginStart="10dp"
+                    android:text="@string/end_workout_confirm"
+                    style="@style/text_small" />
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+                <ImageView
+                    android:id="@+id/cancel_button"
+                    android:background="@drawable/accept_deny_dialog_negative_bg"
+                    android:src="@drawable/ic_clear"
+                    style="@style/action_button" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_toEndOf="@id/cancel_button"
+                    android:layout_centerVertical="true"
+                    android:layout_marginStart="10dp"
+                    android:text="@string/end_workout_cancel"
+                    style="@style/text_small" />
+
+            </RelativeLayout>
+        </LinearLayout>
+    </RelativeLayout>
+</ScrollView>
