--- a/wear/src/main/res/layout/fragment_time_status.xml
+++ b/wear/src/main/res/layout/fragment_time_status.xml
@@ -5,14 +5,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".WorkoutMainFragment">
+    tools:context=".WorkoutDataFragment">
 
     <!-- TODO move constants to res -->
-
-    <FrameLayout
-        android:id="@+id/workout_content_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
 
     <LinearLayout
         android:layout_width="wrap_content"
