--- a/wear/src/main/res/layout/item_history_data.xml
+++ b/wear/src/main/res/layout/item_history_data.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical"
-    tools:context=".HistoryMainFragment">
+    tools:context=".HistoryFragment">
 
     <TextView
         android:id="@+id/date_time"
